--- a/aprendendo_selenium/pom.xml
+++ b/aprendendo_selenium/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>ghostdriver</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.javafaker</groupId>
+		    <artifactId>javafaker</artifactId>
+		    <version>0.16</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
